# creative_tools

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  schema.sql
backend/.cargo/: config.toml
backend/src/: cloudflare.rs  db.rs  logger.rs  main.rs  models.rs
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/workspace/: page.tsx
frontend/app/workspace/characters/: page.tsx
frontend/app/workspace/characters/[id]/: page.tsx
frontend/app/workspace/characters/new/: page.tsx
frontend/app/workspace/my-comics/: page.tsx
frontend/app/workspace/my-comics/[id]/: page.tsx
frontend/app/workspace/my-comics/[id]/canvas/: page.tsx
frontend/app/workspace/my-projects/: page.tsx
frontend/app/workspace/my-projects/[id]/: page.tsx
frontend/app/workspace/my-projects/[id]/canvas/: page.tsx
frontend/app/workspace/my-videos/: page.tsx
frontend/app/workspace/my-videos/[id]/: UploadDialog.tsx  page.tsx
frontend/app/workspace/my-videos/[id]/history/[sceneId]/: page.tsx
frontend/app/workspace/styles/: page.tsx
frontend/app/workspace/video-analysis/: page.tsx  progress.css
frontend/app/workspace/video-analysis/edit/: page.tsx
frontend/app/workspace/video-analysis/test/: page.tsx
frontend/components/: Header.tsx  MainLayout.tsx
frontend/lib/: api.ts  mockData.ts
frontend/types/: character.ts  index.ts  project.ts  style.ts
