[package]
name = "video_analysis_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-multipart = "0.6"
actix-cors = "0.7"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
env_logger = "0.11"
log = "0.4"
image = "0.24"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
sanitize-filename = "0.6.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aws-sdk-s3 = "1.0"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
base64ct = "1.6.0"


# 避免使用需要 edition2024 特性的依赖版本
[patch.crates-io]
base64ct = { version = "1.6.0" }
home = { version = "0.5.9" }
time-core = { version = "0.1.6" }



